--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "loc8r",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "~0.10.13",
+    "npm": "~1.3.2"
   },
   "dependencies": {
     "express": "~4.9.0",
