--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "npm": "~1.3.2"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "dotenv": "^1.2.0",
+    "express": "~4.9.0",
     "jade": "~1.6.0",
     "mongoose": "~3.8.20",
+    "morgan": "~1.3.0",
     "request": "~2.51.0",
+    "serve-favicon": "~2.1.3",
     "uglify-js": "~2.4.15"
   }
 }
