--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "dotenv": "^1.2.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
+    "jsonwebtoken": "^5.0.2",
     "mongoose": "~3.8.20",
     "morgan": "~1.3.0",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
     "request": "~2.51.0",
     "serve-favicon": "~2.1.3",
     "uglify-js": "~2.4.15"
