--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.0.0",
     "dotenv": "^1.2.0",
     "express": "~4.9.0",
+    "express-jwt": "^3.0.1",
     "jade": "~1.6.0",
     "jsonwebtoken": "^5.0.2",
     "mongoose": "~3.8.20",
