--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "npm": "~1.3.2"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "express": "~4.9.0",
+    "jade": "~1.6.0",
+    "mongoose": "^5.11.15",
+    "morgan": "~1.3.0",
+    "nodemon": "^2.0.7",
+    "readline": "0.0.x",
+    "serve-favicon": "~2.1.3"
   }
 }
